--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# jamovi
+build/
+temp/
+*.jmo
+newversion.R
+problems/
+local/
+
 # History files
 .Rhistory
 .Rapp.history
@@ -34,3 +42,4 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+.Rproj.user
