--- a/jamovi/jammglm.r.yaml
+++ b/jamovi/jammglm.r.yaml
@@ -227,6 +227,52 @@ items:
                       type: number
                       format: zto,pvalue
 
-
-
-
+  - name: simplemodels
+    title: Conditional Mediation
+    type: Array
+    description: an array of contrast coefficients tables
+    clearWith:
+                    - dep
+                    - modelTerms
+                    - contrasts
+                    - scaling
+                    - fixedIntercept
+                    - effectSize
+    template:
+      title: Indirect and direct effects computed for $key
+      type: Table
+      columns:
+                    - name: type
+                      title: "Type"
+                      type: text
+                      combineBelow: true
+                    - name: source
+                      title: "Effect"
+                      type: text
+                    - name: label
+                      title: "Contrasts"
+                      visible: false
+                      type: text
+                    - name: est
+                      title: "Estimate"
+                      type: number
+                    - name: se
+                      title: "SE"
+                      type: number
+                    - name: ci.lower
+                      type: number
+                      title: Lower
+                    - name: ci.upper
+                      type: number
+                      title: Upper
+                    - name: std.all
+                      type: number
+                      title: β
+                      visible: (effectSize:beta)
+                    - name: z
+                      title: "z"
+                      type: number
+                    - name: pvalue
+                      title: "p"
+                      type: number
+                      format: zto,pvalue
