--- a/jamovi/jammglm.r.yaml
+++ b/jamovi/jammglm.r.yaml
@@ -41,7 +41,7 @@ items:
                   - moderatorsTerms
     items:
             - name: pathmodel
-              title: Diagram
+              title: Model Diagram
               type: Image
               description: a path model
               width: 600
@@ -60,12 +60,12 @@ items:
               columns:
                   - name: info
                     type: text
-                    title: "Path model notes"
+                    title: "Model diagram notes"
 
 
   - name: models
+    title: ""
     type: Group
-    title: Mediation 
     visible: false
     clearWith:
         - dep
@@ -75,8 +75,8 @@ items:
     items:
           - name: main
             title: Indirect and Total Effects
-            visible: true
             type: Table
+            visible: false
             clearWith:
                      - dep
                      - modelTerms
@@ -227,21 +227,78 @@ items:
                       type: number
                       format: zto,pvalue
 
-  - name: simplemodels
-    title: Conditional Mediation
-    type: Array
-    description: an array of contrast coefficients tables
+  - name: moderation
+    type: Group
+    title: "" 
+    visible: false
     clearWith:
+        - dep
+        - mediators
+        - factors
+        - covs
+        - moderators
+    items:
+         - name: moderationEffects
+           title: Moderation effects (interations)
+           visible: false
+           type: Table
+           clearWith:
+                     - dep
+                     - modelTerms
+                     - contrasts
+                     - fixedIntercept
+                     - simpleScale
+           columns:
+                    - name: mod
+                      title: "Moderator"
+                      combineBelow: true
+                      type: text
+                    - name: target
+                      title: "Moderated Effect"
+                      type: text
+                    - name: label
+                      title: "Contrasts"
+                      visible: false
+                      type: text
+                    - name: est
+                      title: "Estimate"
+                      type: number
+                    - name: se
+                      title: "SE"
+                      type: number
+                    - name: ci.lower
+                      type: number
+                      title: Lower
+                    - name: ci.upper
+                      type: number
+                      title: Upper
+                    - name: std.all
+                      type: number
+                      title: β
+                      visible: (effectSize:beta)
+                    - name: z
+                      title: "z"
+                      type: number
+                    - name: pvalue
+                      title: "p"
+                      type: number
+                      format: zto,pvalue
+
+         - name: simplemodels
+           title: Simple Effects
+           type: Array
+           description: an array of contrast coefficients tables
+           clearWith:
                     - dep
                     - modelTerms
                     - contrasts
                     - scaling
                     - fixedIntercept
                     - effectSize
-    template:
-      title: Indirect and direct effects computed for $key
-      type: Table
-      columns:
+           template:
+              title: Indirect and direct effects computed for $key
+              type: Table
+              columns:
                     - name: type
                       title: "Type"
                       type: text
