--- a/jamovi/jammglm.r.yaml
+++ b/jamovi/jammglm.r.yaml
@@ -64,7 +64,7 @@ items:
 
 
   - name: models
-    title: ""
+    title: "Mediation"
     type: Group
     visible: false
     clearWith:
@@ -73,6 +73,52 @@ items:
         - factors
         - covs
     items:
+          - name: moderationEffects
+            title: Moderation effects (interations)
+            visible: false
+            type: Table
+            clearWith:
+                     - dep
+                     - modelTerms
+                     - contrasts
+                     - fixedIntercept
+                     - simpleScale
+            columns:
+                    - name: mod
+                      title: "Moderator"
+                      combineBelow: true
+                      type: text
+                    - name: target
+                      title: "Interaction"
+                      type: text
+                    - name: label
+                      title: "Contrasts"
+                      visible: false
+                      type: text
+                    - name: est
+                      title: "Estimate"
+                      type: number
+                    - name: se
+                      title: "SE"
+                      type: number
+                    - name: ci.lower
+                      type: number
+                      title: Lower
+                    - name: ci.upper
+                      type: number
+                      title: Upper
+                    - name: std.all
+                      type: number
+                      title: β
+                      visible: (tableOptions:beta)
+                    - name: z
+                      title: "z"
+                      type: number
+                    - name: pvalue
+                      title: "p"
+                      type: number
+                      format: zto,pvalue
+    
           - name: main
             title: Indirect and Total Effects
             type: Table
@@ -138,198 +184,3 @@ items:
                            title: 'Contrast'
                            type: text
 
-
-          - name: medmodels
-            title: Mediators Models 
-            type: Array
-            description: an array of contrast coefficients tables
-            clearWith:
-                    - dep
-                    - modelTerms
-                    - contrasts
-                    - scaling
-                    - fixedIntercept
-                    - effectSize
-            template:
-                title:  $key
-                type: Table
-                columns:
-                    - name: source
-                      title: "Names"
-                      type: text
-                    - name: label
-                      title: "Effect"
-                      type: text
-                    - name: estimate
-                      title: "Estimate"
-                      type: number
-                    - name: se
-                      title: "SE"
-                      type: number
-                    - name: cilow
-                      type: number
-                      title: Lower
-                    - name: cihig
-                      type: number
-                      title: Upper
-                    - name: df
-                      title: "df"
-                      type: number
-                    - name: t
-                      title: "t"
-                      type: number
-                    - name: p
-                      title: "p"
-                      type: number
-                      format: zto,pvalue
-
-          - name: fullmodel
-            title: Parameter Estimates for the full model
-            visible: false
-            type: Table
-            clearWith:
-                     - dep
-                     - modelTerms
-                     - contrasts
-                     - fixedIntercept
-                     - simpleScale
-            columns:
-                    - name: source
-                      title: "Names"
-                      type: text
-                    - name: label
-                      title: "Effect"
-                      type: text
-                    - name: estimate
-                      title: "Estimate"
-                      type: number
-                    - name: se
-                      title: "SE"
-                      type: number
-                    - name: cilow
-                      type: number
-                      title: Lower
-                    - name: cihig
-                      type: number
-                      title: Upper
-                    - name: beta
-                      type: number
-                      title: β
-                      visible: (tableOptions:beta)
-                    - name: df
-                      title: "df"
-                      type: number
-                    - name: t
-                      title: "t"
-                      type: number
-                    - name: p
-                      title: "p"
-                      type: number
-                      format: zto,pvalue
-
-  - name: moderation
-    type: Group
-    title: "" 
-    visible: false
-    clearWith:
-        - dep
-        - mediators
-        - factors
-        - covs
-        - moderators
-    items:
-         - name: moderationEffects
-           title: Moderation effects (interations)
-           visible: false
-           type: Table
-           clearWith:
-                     - dep
-                     - modelTerms
-                     - contrasts
-                     - fixedIntercept
-                     - simpleScale
-           columns:
-                    - name: mod
-                      title: "Moderator"
-                      combineBelow: true
-                      type: text
-                    - name: target
-                      title: "Moderated Effect"
-                      type: text
-                    - name: label
-                      title: "Contrasts"
-                      visible: false
-                      type: text
-                    - name: est
-                      title: "Estimate"
-                      type: number
-                    - name: se
-                      title: "SE"
-                      type: number
-                    - name: ci.lower
-                      type: number
-                      title: Lower
-                    - name: ci.upper
-                      type: number
-                      title: Upper
-                    - name: std.all
-                      type: number
-                      title: β
-                      visible: (tableOptions:beta)
-                    - name: z
-                      title: "z"
-                      type: number
-                    - name: pvalue
-                      title: "p"
-                      type: number
-                      format: zto,pvalue
-
-         - name: simplemodels
-           title: Simple Effects
-           type: Array
-           description: an array of contrast coefficients tables
-           clearWith:
-                    - dep
-                    - modelTerms
-                    - contrasts
-                    - scaling
-                    - fixedIntercept
-                    - effectSize
-           template:
-              title: Indirect and direct effects computed for $key
-              type: Table
-              columns:
-                    - name: type
-                      title: "Type"
-                      type: text
-                      combineBelow: true
-                    - name: source
-                      title: "Effect"
-                      type: text
-                    - name: label
-                      title: "Contrasts"
-                      visible: false
-                      type: text
-                    - name: est
-                      title: "Estimate"
-                      type: number
-                    - name: se
-                      title: "SE"
-                      type: number
-                    - name: ci.lower
-                      type: number
-                      title: Lower
-                    - name: ci.upper
-                      type: number
-                      title: Upper
-                    - name: std.all
-                      type: number
-                      title: β
-                      visible: (tableOptions:beta)
-                    - name: z
-                      title: "z"
-                      type: number
-                    - name: pvalue
-                      title: "p"
-                      type: number
-                      format: zto,pvalue
