--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,10 @@ Version: 0.0.5
 Author: Marcello Gallucci
 Maintainer: Marcello Gallucci <mcfanda@gmail.com>
 Description: A suite for estimation of mediational models, including multiple mediators, and conditional mediation
-License: GPL2+
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Imports: jmvcore (>= 0.8.0), diagram, gridExtra, lavaan
 Depends: jmvcore
 Exports: jammGLM
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
