--- a/jamovi/jammglm.r.yaml
+++ b/jamovi/jammglm.r.yaml
@@ -52,7 +52,8 @@ items:
                   - mediatorsTerms
                   - modelTerms
                   - moderatorsTerms
-              
+                  - pathOptions
+                  
             - name: pathnotes
               type: Table
               title: ""
